Fix register item position on mobile view

--- a/client/src/sass/pages/Register/_register.scss
+++ b/client/src/sass/pages/Register/_register.scss
@@ -19,6 +19,9 @@
         @include flex-with-direction-center();
 
         @include xs-breakpoint{
+            width: 90%;
+            top:47%;
+            gap:3em;
             flex-direction: column-reverse;
         }
 
@@ -35,6 +38,7 @@
 
             @include xs-breakpoint{
                 margin:2em 0em 3em 0em;
+                width: 50%;
             }
 
             .register-link{
@@ -61,6 +65,15 @@
                             height: 80%;
                             object-fit: cover;
                             border-radius: 8px;
+                        }
+                    }
+
+                    @include xs-breakpoint{
+                        padding:.8em 0;
+
+                        .avatar{
+                            min-width: 140px;
+                            min-height: 140px;
                         }
                     }
                     
